recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not found: value lenght
    avance(shrink*shrink*shrink*shrink*lenght)
                                       ^